refactor: fix H2/H3/H4/Q1/Q4/Q5/C3/S3 code-quality issues (#2)
H2: patch() now loads entity once and merges JSON directly without
    delegating to update(), eliminating 3 DB round-trips → 1.

H3: validateExistingCustomer() no longer calls existsById; the
    findById().orElseThrow() inside update() handles not-found.

H4: CustomerEntity builder sets explicit createdAt/updatedAt so
    @PrePersist null-guards preserve them; update() and patch()
    read createdAt from JSONB via convertToCustomer(), not the
    entity column, preventing timestamp drift.

Q1: Removed public setId() setter from CustomerEntity — the id
    column is updatable=false; creation now uses the builder.

Q4: Replaced Collectors.toList() with Stream.toList() (Java 21).

Q5: Removed @RequestMapping(produces=…) from @RestControllerAdvice —
    that annotation narrows which controllers the advice applies to,
    not the response content type.

C3: Moved show-sql:true to application-local.yml only; default
    profile now has show-sql:false to avoid flooding prod logs.

S3: Removed clientIp and forwardedFor from addRequestMetadata() to
    prevent PII/topology leakage in error responses.

Tests updated: removed existsById stubs from update/patch tests,
migrated new CustomerEntity()+setId() to builder across service and
repository unit tests, updated patch save-fail assertion message.